fixed some alignment issues

--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -15,6 +15,12 @@ h1 {
   
 }
 
+.card-services {
+  height: 450px !important;
+}
+
+
+
 .container-fluid {
   background: #740302;
   display: flex;
@@ -65,6 +71,17 @@ h1 {
 .btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
   background-color: rgb(233, 153, 153)!important;
   border-color: rgb(119, 8, 8);
+}
+
+.nav-link {
+  padding-left: 5px !important;
+}
+
+.card-columns {
+  column-count: 3;
+  justify-content: center !important;
+  align-items: center !important;
+  margin: 0 auto !important;
 }
 
 .form{
@@ -142,10 +159,13 @@ input:focus {
   color: #FFFFFF !important;
 }
 
-.ui-datepicker-prev {
+.ui-datepicker-prev .ui-icon{
   float: left;
   cursor: pointer;
-  color: #ff3733 !important;;
+  background-image: url("../images/leftarrouw.png");
+  background-size: 16px;
+  background-position: center 0px;
+  color: #ff3733 !important;
 }
 
 .ui-datepicker-prev:hover {
@@ -156,10 +176,16 @@ input:focus {
   color: #ff3733 !important;
 }
 
-.ui-datepicker-next {
+.ui-datepicker-next .ui-icon{
   float: right;
   cursor: pointer;
+  background-image: url("../images/leftarrouw.png");
+  transform: rotate(180deg);
+  background-size: 16px;
   background-position: center 0px;
+  color: #ff3733 !important;
+}
+.ui-alt-icon{
   color: #ff3733 !important;
 }
 
